[tool.poetry]
name = "juicenet-cli"
version = "0.45.0"
description = "CLI tool designed to simplify the process of uploading files to Usenet"
authors = ["Raventric <raven@juicenet.in>"]
license = "Unlicense"
readme = "README.md"
packages = [{ include = "juicenet", from = "src" }]
homepage = "https://juicenet.in"
repository = "https://github.com/Ravencentric/juicenet-cli"
documentation = "https://juicenet.in"
classifiers = [
    "License :: OSI Approved :: The Unlicense (Unlicense)",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Typing :: Typed",
]

[tool.poetry.urls]
Contact = "https://discord.gg/snackbox"

[tool.poetry.dependencies]
python = "^3.9"
cyclopts = "^2.6.0"
PyYAML = "^6.0.1"
loguru = "^0.7.2"
rich = "^13.7.1"
colorama = "^0.4.6"
pydantic = "^2.7.0"
strenum = { version = "^0.4.15", python = "<3.11" }
importlib-metadata = { version = "^7.1.0", python = "<3.10" }
natsort = "^8.4.0"

[tool.poetry.group.dev.dependencies]
ruff = "^0.3.6"
mypy = "^1.9.0"
loguru-mypy = "^0.0.4"
pre-commit = "^3.7.0"

[tool.poetry.group.docs.dependencies]
mkdocs-material = "^9.5.17"
mkdocstrings = {extras = ["python"], version = "^0.24.0"}
mkdocs-autorefs = "^1.0.1"

[tool.ruff]
line-length = 120

[tool.ruff.lint]
extend-select = ["I"]
fixable = ["ALL"]

[tool.mypy]
strict = true
pretty = true

[[tool.mypy.overrides]]
module = ["colorama", "yaml"]
ignore_missing_imports = true

[tool.poetry.scripts]
juicenet = "juicenet.__main__:app"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
