[tool.poetry]
name = "juicenet-cli"
version = "0.45.6"
description = "CLI tool designed to simplify the process of uploading files to Usenet"
authors = ["Ravencentric <me@ravencentric.cc>"]
license = "Unlicense"
readme = "README.md"
packages = [{ include = "juicenet", from = "src" }]
homepage = "https://juicenet.ravencentric.cc"
repository = "https://github.com/Ravencentric/juicenet-cli"
documentation = "https://juicenet.ravencentric.cc"
classifiers = [
    "License :: OSI Approved :: The Unlicense (Unlicense)",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Typing :: Typed",
]

[tool.poetry.urls]
Discord = "https://discord.gg/snackbox"

[tool.poetry.dependencies]
python = "^3.9"
cyclopts = "^2.9.3"
PyYAML = "^6.0.1"
loguru = "^0.7.2"
rich = "^13.7.1"
colorama = "^0.4.6"
pydantic = "^2.8.2"
strenum = { version = "^0.4.15", python = "<3.11" }
importlib-metadata = { version = "^8.0.0", python = "<3.10" }
natsort = "^8.4.0"

[tool.poetry.group.dev.dependencies]
ruff = "^0.5.1"
mypy = "^1.10.1"
loguru-mypy = "^0.0.4"
pre-commit = "^3.7.1"

[tool.poetry.group.docs.dependencies]
mkdocs-material = "^9.5.28"
mkdocstrings = { extras = ["python"], version = "^0.25.1" }
mkdocs-autorefs = "^1.0.1"

[tool.ruff]
line-length = 120

[tool.ruff.lint]
extend-select = ["I"]
fixable = ["ALL"]

[tool.mypy]
strict = true
pretty = true

[[tool.mypy.overrides]]
module = ["colorama", "yaml"]
ignore_missing_imports = true

[tool.poetry.scripts]
juicenet = "juicenet.__main__:app"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
