[project]
name = "juicenet-cli"
version = "0.46.4"
description = "CLI tool designed to simplify the process of uploading files to Usenet"
authors = [{ name = "Ravencentric", email = "me@ravencentric.cc" }]
requires-python = ">=3.9"
readme = "README.md"
license = "Unlicense"
classifiers = [
    "License :: OSI Approved :: The Unlicense (Unlicense)",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
]
dependencies = [
    "cyclopts>=2.9.3",
    "PyYAML>=6.0.1",
    "loguru>=0.7.2",
    "rich>=13.7.1",
    "colorama>=0.4.6",
    "pydantic>=2.8.2",
    "strenum>=0.4.15 ; python_version < '3.11'",
    "importlib-metadata>=8.0.0 ; python_version < '3.10'",
    "natsort>=8.4.0",
]

[project.urls]
Repository = "https://github.com/Ravencentric/juicenet-cli"
Documentation = "https://juicenet.ravencentric.cc"

[project.scripts]
juicenet = "juicenet.__main__:app"

[dependency-groups]
docs = [
    "mkdocs-autorefs>=1.3.1",
    "mkdocs-material>=9.6.5",
    "mkdocstrings[python]>=0.28.1",
]
dev = [
    "ruff>=0.9.7",
    "mypy>=1.15.0",
    "loguru-mypy>=0.0.4",
    { include-group = "docs" },
]

[tool.hatch.build.targets.sdist]
include = ["src/juicenet"]

[tool.hatch.build.targets.wheel]
include = ["src/juicenet"]

[tool.hatch.build.targets.wheel.sources]
"src/juicenet" = "juicenet"

[tool.ruff]
line-length = 120

[tool.ruff.lint]
extend-select = ["I", "UP"]
fixable = ["ALL"]

[tool.mypy]
strict = true
pretty = true

[[tool.mypy.overrides]]
module = ["colorama", "yaml"]
ignore_missing_imports = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
